# cesnet-datazoo

./: .gitignore  .isort.cfg  .pylintrc  404.html  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
cesnet_datazoo/: config.py  constants.py
cesnet_datazoo/datasets/: __init__.py  cesnet_dataset.py  datasets.py  datasets_constants.py  loaders.py  statistics.py
cesnet_datazoo/datasets/metadata/: dataset_metadata.py  metadata.csv
cesnet_datazoo/metrics/: classification_report.py  provider_metrics.py  superclass_metrics.py
cesnet_datazoo/pytables_data/: apps_split.py  data_scalers.py  indices_setup.py  pytables_dataset.py
cesnet_datazoo/utils/: class_info.py  download.py  fileutils.py  random.py
dataloaders/: index.html
dataset_metadata/: index.html
datasets_overview/: index.html
docs/: dataloaders.md  dataset_metadata.md  datasets_overview.md  features.md  getting_started.md  index.md  installation.md  reference_cesnet_dataset.md  reference_dataset_config.md  reference_datasets.md  transforms.md
features/: index.html
getting_started/: index.html
installation/: index.html
notebooks/: example_evaluation.ipynb  explore_data.ipynb
reference_cesnet_dataset/: index.html
reference_dataset_config/: index.html
reference_datasets/: index.html
search/: search_index.json
transforms/: index.html
