[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cesnet-datazoo"
version = "0.0.4"
authors = [
  {name = "Jan Luxemburk", email = "luxemburk@cesnet.cz"},
  {name = "Karel Hynek", email = "hynekkar@cesnet.cz"},
]
maintainers = [
  {name = "Jan Luxemburk", email = "luxemburk@cesnet.cz"},
  {name = "Karel Hynek", email = "hynekkar@cesnet.cz"},
]
description = "A toolkit for large network traffic datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
keywords = [
  "traffic classification",
  "datasets",
  "machine learning"
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
dependencies = [
  "tables~=3.8.0",
  "numpy~=1.23.5",
  "pandas~=1.5.3",
  "scikit-learn~=1.2.0",
  "torch~=1.12.0",
  "matplotlib~=3.6.3",
  "seaborn~=0.12.2",
  "tqdm~=4.64.1",
  "PyYAML~=6.0",
  "pydantic~=1.10.4",
  "requests~=2.28.2",
]

[project.urls]
"Homepage" = "https://github.com/CESNET/cesnet-datazoo"
"Documentation" = "https://cesnet.github.io/cesnet-datazoo/"
"Bug Tracker" = "https://github.com/CESNET/cesnet-datazoo/issues"

[tool.setuptools]
packages = [
  "cesnet_datazoo",
  "cesnet_datazoo.datasets",
  "cesnet_datazoo.datasets.metadata",
  "cesnet_datazoo.metrics",
  "cesnet_datazoo.pytables_data",
  "cesnet_datazoo.utils",
]

[tool.setuptools.package-data]
cesnet_datazoo = ["datasets/metadata/metadata.csv"]