[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cesnet-datazoo"
version = "0.1.2"
authors = [
  {name = "Jan Luxemburk", email = "luxemburk@cesnet.cz"},
  {name = "Karel Hynek", email = "hynekkar@cesnet.cz"},
]
maintainers = [
  {name = "Jan Luxemburk", email = "luxemburk@cesnet.cz"},
  {name = "Karel Hynek", email = "hynekkar@cesnet.cz"},
]
description = "A toolkit for large network traffic datasets"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
  "traffic classification",
  "datasets",
  "machine learning"
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "cesnet_models",
  "matplotlib",
  "numpy",
  "pandas",
  "pydantic>=2.0",
  "PyYAML",
  "requests",
  "scikit-learn",
  "seaborn",
  "tables>=3.8.0",
  "torch>=1.10",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "build",
  "mkdocs-autorefs",
  "mkdocs-material-extensions",
  "mkdocs-material",
  "mkdocs",                       
  "mkdocstrings-python",
  "mkdocstrings",
  "twine",
]

[project.urls]
"Homepage" = "https://github.com/CESNET/cesnet-datazoo"
"Documentation" = "https://cesnet.github.io/cesnet-datazoo/"
"Bug Tracker" = "https://github.com/CESNET/cesnet-datazoo/issues"

[tool.setuptools]
packages = [
  "cesnet_datazoo",
  "cesnet_datazoo.datasets",
  "cesnet_datazoo.datasets.metadata",
  "cesnet_datazoo.metrics",
  "cesnet_datazoo.pytables_data",
  "cesnet_datazoo.utils",
]

[tool.setuptools.package-data]
cesnet_datazoo = ["datasets/metadata/metadata.csv"]